tests/snapshots/search_transactions__search_transactions_internal_command.snap
---
source: tests/search_transactions.rs
expression: response
---
Ok(
    SearchTransactionsResponse {
        transactions: [
            BlockTransaction {
                block_identifier: BlockIdentifier {
                    index: 2,
                    hash: "3NLszFtKjd6gDcCwcbwqTQLJoB1jfU9QL1DW2Y8A9g4FRH9ySWLp",
                },
                transaction: Transaction {
                    transaction_identifier: TransactionIdentifier {
                        hash: "coinbase:0:0:CkpYcKc2oGs8JUd4tmdGBsZXQCQVkayuyffEjrNWctX5Wuad3vVNe",
                    },
                    operations: [
                        Operation {
                            operation_identifier: OperationIdentifier {
                                index: 0,
                                network_index: None,
                            },
                            related_operations: None,
                            type: "coinbase_inc",
                            status: Some(
                                "Success",
                            ),
                            account: Some(
                                AccountIdentifier {
                                    address: "B62qmM4HnDHDwVXqBdCcXQJ9U2zAPNkhqmo8SNWAxKWoEok7GzQEkTv",
                                    sub_account: None,
                                    metadata: Some(
                                        Object {
                                            "token_id": String("wSHV2S4qX9jFsLjQo8r1BsMLH2ZRKsZx6EJd1sbozGPieEC4Jf"),
                                        },
                                    ),
                                },
                            ),
                            amount: Some(
                                Amount {
                                    value: "1440000000000",
                                    currency: Currency {
                                        symbol: "MINA",
                                        decimals: 9,
                                        metadata: None,
                                    },
                                    metadata: None,
                                },
                            ),
                            coin_change: None,
                            metadata: None,
                        },
                    ],
                    related_transactions: None,
                    metadata: None,
                },
                timestamp: None,
            },
        ],
        total_count: 1,
        next_offset: None,
    },
)
