tests/snapshots/search_transactions__search_transactions_zkapp_success.snap
---
source: tests/search_transactions.rs
expression: response
---
Ok(
    SearchTransactionsResponse {
        transactions: [
            BlockTransaction {
                block_identifier: BlockIdentifier {
                    index: 337818,
                    hash: "3NKdrqcGAwSgfK6T8az4cauXExHs7D9eKC6Ywotm8qEeudPLxepG",
                },
                transaction: Transaction {
                    transaction_identifier: TransactionIdentifier {
                        hash: "5JvFoEyvuPu9zmi4bDGbhqsakre2SPQU1KKbeh2Lk5uC9eYrc2h2",
                    },
                    operations: [
                        Operation {
                            operation_identifier: OperationIdentifier {
                                index: 0,
                                network_index: None,
                            },
                            related_operations: None,
                            type: "zkapp_fee_payer_dec",
                            status: Some(
                                "Success",
                            ),
                            account: Some(
                                AccountIdentifier {
                                    address: "B62qjGsPY47SMkTykivPBAU3riS9gvMMrGr7ve6ynoHJNBzAhQmtoBn",
                                    sub_account: None,
                                    metadata: Some(
                                        Object {
                                            "token_id": String("wSHV2S4qX9jFsLjQo8r1BsMLH2ZRKsZx6EJd1sbozGPieEC4Jf"),
                                        },
                                    ),
                                },
                            ),
                            amount: Some(
                                Amount {
                                    value: "-10000000",
                                    currency: Currency {
                                        symbol: "MINA",
                                        decimals: 9,
                                        metadata: None,
                                    },
                                    metadata: None,
                                },
                            ),
                            coin_change: None,
                            metadata: None,
                        },
                        Operation {
                            operation_identifier: OperationIdentifier {
                                index: 1,
                                network_index: None,
                            },
                            related_operations: None,
                            type: "zkapp_balance_update",
                            status: Some(
                                "Success",
                            ),
                            account: Some(
                                AccountIdentifier {
                                    address: "B62qqieAv9AQCsLHfinPESXB9exSJBpTVLpgkjqWT9cSGBc67pBkNxs",
                                    sub_account: None,
                                    metadata: Some(
                                        Object {
                                            "token_id": String("wSHV2S4qX9jFsLjQo8r1BsMLH2ZRKsZx6EJd1sbozGPieEC4Jf"),
                                        },
                                    ),
                                },
                            ),
                            amount: Some(
                                Amount {
                                    value: "0",
                                    currency: Currency {
                                        symbol: "MINA",
                                        decimals: 9,
                                        metadata: None,
                                    },
                                    metadata: None,
                                },
                            ),
                            coin_change: None,
                            metadata: None,
                        },
                        Operation {
                            operation_identifier: OperationIdentifier {
                                index: 2,
                                network_index: None,
                            },
                            related_operations: None,
                            type: "zkapp_balance_update",
                            status: Some(
                                "Success",
                            ),
                            account: Some(
                                AccountIdentifier {
                                    address: "B62qjGsPY47SMkTykivPBAU3riS9gvMMrGr7ve6ynoHJNBzAhQmtoBn",
                                    sub_account: None,
                                    metadata: Some(
                                        Object {
                                            "token_id": String("wSHV2S4qX9jFsLjQo8r1BsMLH2ZRKsZx6EJd1sbozGPieEC4Jf"),
                                        },
                                    ),
                                },
                            ),
                            amount: Some(
                                Amount {
                                    value: "0",
                                    currency: Currency {
                                        symbol: "MINA",
                                        decimals: 9,
                                        metadata: None,
                                    },
                                    metadata: None,
                                },
                            ),
                            coin_change: None,
                            metadata: None,
                        },
                    ],
                    related_transactions: None,
                    metadata: None,
                },
            },
        ],
        total_count: 1,
        next_offset: None,
    },
)
